tests/error/divideInteger-wrong-2nd-argument-data.uplc
(program 1.0.0[[(builtin divideInteger)(con integer 10)](con data {ByteString #AFD3})])